--- a/capTest/Dockerfile
+++ b/capTest/Dockerfile
@@ -9,6 +9,7 @@ WORKDIR /usr/src/app
 COPY ./capTest/package*.json ./
 
 RUN npm install
+RUN npm run setup:server
 # If you are building your code for production
 # RUN npm ci --only=production
 
@@ -16,4 +17,4 @@ RUN npm install
 COPY ./capTest ./
 
 EXPOSE 80
-CMD [ "npm", "start" ]
+CMD [ "node", "index.js" ]
