--- a/capTest/Dockerfile
+++ b/capTest/Dockerfile
@@ -27,11 +27,11 @@ RUN apk update && apk upgrade && \
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-COPY ./package.json /usr/src/app/
+COPY ./package*.json /usr/src/app/
 RUN npm install --production && npm cache clean --force
 COPY ./ /usr/src/app
 ENV NODE_ENV production
 ENV PORT 80
 EXPOSE 80
 
-CMD [ "npm", "start" ]
+CMD [ "node", "capTest/index.js" ]
