--- a/capTest/Dockerfile
+++ b/capTest/Dockerfile
@@ -20,18 +20,32 @@
 # CMD [ "node", "capTest/index.js" ]
 FROM node:16-alpine
 # Uncomment the line above if you want to use a Dockerfile instead of templateId
+WORKDIR /app
 
-
-RUN apk update && apk upgrade && \
-    apk add --no-cache git
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
-
-COPY ./package*.json /usr/src/app/
+COPY ./capTest/package*.json ./
 RUN npm install --production && npm cache clean --force
-COPY ./ /usr/src/app
+COPY ./capTest ./
 ENV NODE_ENV production
 ENV PORT 80
 EXPOSE 80
 
 CMD [ "node", "capTest/index.js" ]
+
+# FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
+# WORKDIR /app
+
+# # Copy everything
+# COPY ./capTest/capTest.csproj ./
+# # Restore as distinct layers
+# RUN dotnet restore
+# # Build and publish a release
+# COPY capTest/ ./
+
+# RUN dotnet publish -c Release -o out
+
+# # Start runtime image
+# FROM mcr.microsoft.com/dotnet/sdk:6.0
+# WORKDIR /app
+# COPY --from=build-env /app/out .
+# # ------------------------------------⬇ replace with your apps name + .dll
+# CMD ASPNETCORE_URLS=http://* dotnet capTest.dll
