--- a/capTest/Dockerfile
+++ b/capTest/Dockerfile
@@ -1,33 +1,15 @@
-# FROM node:16
 
-# # Create app directory
-# WORKDIR /usr/src/app
-
-# # Install app dependencies
-# # A wildcard is used to ensure both package.json AND package-lock.json are copied
-# # where available (npm@5+)
-# COPY package*.json ./
-
-# RUN npm install
-# # RUN npm run setup:server
-# # If you are building your code for production
-# # RUN npm ci --only=production
-
-# # Bundle app source
-# COPY ./ ./
-
-# EXPOSE 3000
-# CMD [ "node", "capTest/index.js" ]
-FROM node:16
+FROM node:16 AS build-env
 # Uncomment the line above if you want to use a Dockerfile instead of templateId
 WORKDIR /app
 
 COPY ./capTest/package*.json ./
 RUN npm install  && npm audit fix
 COPY ./capTest ./
-ENV NODE_ENV production
-ENV PORT 80
-EXPOSE 80
+
+FROM node:16
+WORKDIR /app
+COPY --from=build-env /app/out .
 
 CMD [ "npm", "Start" ]
 
